--- a/solutions/Cargo.toml
+++ b/solutions/Cargo.toml
@@ -12,3 +12,6 @@ itertools = "0.10.3"
 gag = "^1.0"
 prettytable-rs = "^0.10"
 lazy_static = "1.2.0"
+phf = "0.11.2"
+phf_macros = "0.11.2"
+pcre2 = "0.2.6"
