--- a/solutions/Cargo.toml
+++ b/solutions/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
-regex = "1.5"
+regex = "^1.10"
 itertools = "0.10.3"
 gag = "^1.0"
 prettytable-rs = "^0.10"
